Fix: Bootstrap 5 buttons could overflow the dropdown container

--- a/css/buttons.bootstrap5.scss
+++ b/css/buttons.bootstrap5.scss
@@ -40,7 +40,7 @@ div.dt-button-collection {
 	}
 
 	.dt-button:not(.dt-btn-split-drop) {
-		min-width: 200px;
+		min-width: 182px;
 	}
 
 	div.dt-btn-split-wrapper {
